# matchflix

./: .env.example  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
