[project]
name = "matchflix"
version = "0.1.0"
description = "Movie recommendation experiments with TMDB."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "requests",
]

[dependency-groups]
dev = ["pre-commit", "nbstripout", "ruff"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["output", "data", ".venv", ".venv-linux"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
